corrected spacing on both layouts. Need to add color and images to site now

--- a/less/index.less
+++ b/less/index.less
@@ -59,26 +59,32 @@ html, body {
 
 @mobile-width: 500px;
 
+.flex-row-nowrap {
+	display: flex;
+	flex-flow: row nowrap;
+}
+
+.flex-column-nowrap {
+	display: flex;
+	flex-flow: column nowrap;
+}
+
 .container {
 	width: 900px;
 	margin: 0 auto;
+	font-family: 'Sarabun', sans-serif;
 
 	@media (max-width: @mobile-width) {
 		width: @mobile-width;
 	}
-}
-
-.container {
-	header {
-		display: flex;
-		flex-flow: column nowrap;
-	}
 
 	header {
+		.flex-column-nowrap();
+	
 		nav {
-			display: flex;
-			flex-flow: row nowrap;
+			.flex-row-nowrap();
 			justify-content: space-evenly;
+			align-content: center;
 			margin: 20px 0px;
 
 			@media (max-width: @mobile-width) {
@@ -89,8 +95,8 @@ html, body {
 		nav a {
 			color: gray;
 			text-decoration: none;
-			border: 2px solid gray;
-			padding: 5px;
+			border: 1px solid gray;
+			padding: 12px 15px;
 			border-radius: 5px;
 			text-align: center;
 
@@ -98,13 +104,26 @@ html, body {
 				width: 100%;
 				border: none;
 				border-top: 1px solid gray;
+				margin: 10px 0px;
+				font-size: 15px;
 			}
 		}
 
 		nav a:last-child {
 			@media (max-width: @mobile-width) {
 				border-bottom: 1px solid gray;
+				padding-bottom: 30px;
 			}
+		}
+
+		nav a:first-child {
+			@media (max-width: @mobile-width) {
+				margin-top: 0px;
+			}
+		}
+
+		nav a:hover{
+			color: lightgray;
 		}
 
 		h1 {
@@ -131,27 +150,31 @@ html, body {
 
 	.main-pg {
 		width: 100%;
-		display: flex;
-		flex-flow: row nowrap;
+		.flex-row-nowrap();
 
 		@media (max-width: @mobile-width) {
 			flex-flow: column nowrap;
 		}
-	}
-
-	.main-pg {
+	
 		.content {
 			width: 33%;
-			margin: 20px 0px;
+			margin: 20px 20px;
 		
 			@media (max-width: @mobile-width) {
 				width: 100%;
 			}
 		}
 	}
+
+	footer {
+		.flex-column-nowrap();
+		text-align: center;
+		margin: 20px;
+
+
+		h4 {
+			font-size: 25px;
+			margin: 20px 30px;
+		}
+	}
 }
-
-
-
-
-
